# cstring

./: .gitignore  CMakeLists.txt  HelloWorld.c  README.md
include/cstring/: header.h  strcat.h  strlen.h
src/: HelloWorld.c  mstrcat.c  strlen.c
